@@ -5,7 +5,7 @@
 	<artifactId>Fieldbook</artifactId>
 	<packaging>war</packaging>
 	<name>Fieldbook</name>
-        <version>4.0.0.BETA.8</version>
+        <version>4.0.0.BETA.10</version>
 
 	<properties>
         <ibpcommons.version>${project.version}</ibpcommons.version>
@@ -499,6 +499,14 @@
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+		
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
